# colony

./: .gitattributes  .gitignore  Cargo.toml  book.toml  colony-client-81c29ae27e77fc8a.js  colony-client-ae3e103e9263ef5d.js  colony-client-e7144fbc20dbb306.js  index.html  readme.md
.github/workflows/: ci.yml  deploy-page.yaml  release.yaml
apps/colony-client/: Cargo.toml  index.html  trunk.toml
apps/colony-client/src/: main.rs
assets/models/: simple_character.blend  simple_character.glb
docs/: colony.md  summary.md
docs/combat/: combat.md  magic.md
libs/colony-core/: Cargo.toml
libs/colony-core/src/: game_state.rs  lib.rs
libs/colony-core/src/plugins/: camera_plugin.rs  core_client_plugin.rs  debug_plugin.rs  game_plugin.rs  loading_plugin.rs  mod.rs  physics_plugin.rs
libs/colony-core/src/plugins/debug/: axis_indicator_plugin.rs  debug_plugin.rs  mod.rs
