[package]
name = "colony-core"
version = "0.1.0"
edition = "2021"

[features]
dynamic = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.8.0", deault-features = false, features = [
        "bevy_asset",
        "bevy_winit",
        "render", 
        "png",
        "x11",
        "bevy_gilrs",
        "bevy_scene",
        "animation",
        "bevy_gltf" ] }
bevy_kira_audio = { version = "0.12.0" }
bevy_asset_loader = { version = "0.12.0" }
bevy_rapier3d = "0.16.1"
winit = { version = "0.26.1", default-features = false }
image = { version = "0.24.3", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_web_fullscreen = { git = "https://github.com/ostwilkens/bevy_web_fullscreen" }
